// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-top-navigation renders with Title, Version & Status: renders-with-title-version-status 1`] = `
<ic-top-navigation app-title="ApplicationName" status="alpha" version="v0.0.7">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
              <div class="app-status">
                <ic-typography aria-label="app tag" class="app-status-text" variant="label-uppercase">
                  alpha
                </ic-typography>
              </div>
              <div class="app-version">
                <ic-typography aria-label="app version" class="app-version-text" variant="label">
                  v0.0.7
                </ic-typography>
              </div>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
              </div>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with app icon & title: renders-with-app-icon-and-title 1`] = `
<ic-top-navigation app-title="ApplicationName">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <div aria-hidden="true" class="app-icon-container">
                  <slot name="app-icon"></slot>
                </div>
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <svg fill="#000000" height="24px" slot="app-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-5.5-2.5l7.51-3.49L17.5 6.5 9.99 9.99 6.5 17.5zm5.5-6.6c.61 0 1.1.49 1.1 1.1s-.49 1.1-1.1 1.1-1.1-.49-1.1-1.1.49-1.1 1.1-1.1z"></path>
  </svg>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with app title: renders-with-app-title 1`] = `
<ic-top-navigation app-title="ApplicationName">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with buttons: renders-with-buttons 1`] = `
<ic-top-navigation app-title="ApplicationName" status="alpha" version="v0.0.7">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
              <div class="app-status">
                <ic-typography aria-label="app tag" class="app-status-text" variant="label-uppercase">
                  alpha
                </ic-typography>
              </div>
              <div class="app-version">
                <ic-typography aria-label="app version" class="app-version-text" variant="label">
                  v0.0.7
                </ic-typography>
              </div>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
                <div class="icon-buttons-container">
                  <slot name="buttons"></slot>
                </div>
              </div>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <ic-navigation-button label="button1" onclick="alert('test')" slot="buttons">
    <svg fill="#000000" height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
      <path d="M0 0h24v24H0V0z" fill="none"></path>
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-5.5-2.5l7.51-3.49L17.5 6.5 9.99 9.99 6.5 17.5zm5.5-6.6c.61 0 1.1.49 1.1 1.1s-.49 1.1-1.1 1.1-1.1-.49-1.1-1.1.49-1.1 1.1-1.1z"></path>
    </svg>
  </ic-navigation-button>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with custom title link url: renders-with-custom-title-link-url 1`] = `
<ic-top-navigation app-title="ApplicationName" href="https://www.google.co.uk/">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="https://www.google.co.uk/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with navigation: renders-with-navigation 1`] = `
<ic-top-navigation app-title="ApplicationName" status="alpha" version="v0.0.7">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
              <div class="app-status">
                <ic-typography aria-label="app tag" class="app-status-text" variant="label-uppercase">
                  alpha
                </ic-typography>
              </div>
              <div class="app-version">
                <ic-typography aria-label="app version" class="app-version-text" variant="label">
                  v0.0.7
                </ic-typography>
              </div>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
              </div>
            </div>
          </div>
          <div class="navigation-tabs">
            <span aria-hidden="true" class="navigation-landmark-text" id="navigation-landmark-text">
              Main navigation
            </span>
            <nav aria-labelledby="navigation-landmark-text" class="nav-panel-container">
              <ic-horizontal-scroll appearance="light">
                <ul class="navigation-item-list" tabindex="-1">
                  <slot name="navigation"></slot>
                </ul>
              </ic-horizontal-scroll>
            </nav>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <ic-navigation-item class="light navigation-item navigation-item-top-nav" href="/" label="Navigation 1" role="listitem" slot="navigation">
    <mock:shadow-root>
      <ic-tooltip class="tooltip-navigation-item" label="Navigation 1" placement="right" target="navigation-item">
        <a aria-labelledby="ic-tooltip-navigation-item" class="link" href="/" part="link">
          <ic-typography variant="label">
            Navigation 1
          </ic-typography>
        </a>
      </ic-tooltip>
    </mock:shadow-root>
  </ic-navigation-item>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with search: renders-with-search 1`] = `
<ic-top-navigation app-title="ApplicationName" status="alpha" version="v0.0.7">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
              <div class="app-status">
                <ic-typography aria-label="app tag" class="app-status-text" variant="label-uppercase">
                  alpha
                </ic-typography>
              </div>
              <div class="app-version">
                <ic-typography aria-label="app version" class="app-version-text" variant="label">
                  v0.0.7
                </ic-typography>
              </div>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
              </div>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <ic-search-bar label="Search" placeholder="Search" slot="search"></ic-search-bar>
</ic-top-navigation>
`;

exports[`ic-top-navigation renders with slotted app-title content: renders-with-slotted-app-title-content 1`] = `
<ic-top-navigation status="alpha" version="v0.0.7">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <div class="title-link">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    <slot name="app-title"></slot>
                  </h1>
                </ic-typography>
              </div>
              <div class="app-status">
                <ic-typography aria-label="app tag" class="app-status-text" variant="label-uppercase">
                  alpha
                </ic-typography>
              </div>
              <div class="app-version">
                <ic-typography aria-label="app version" class="app-version-text" variant="label">
                  v0.0.7
                </ic-typography>
              </div>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
              </div>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <a href="/" slot="app-title">
    App Title
  </a>
</ic-top-navigation>
`;

exports[`ic-top-navigation tests form in search slot: form-in-search-slot 1`] = `
<ic-top-navigation app-title="ApplicationName">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography variant="h3">
                  <h1 class="title-wrap">
                    ApplicationName
                  </h1>
                </ic-typography>
              </a>
            </div>
            <div class="search-menu-container">
              <div class="search-actions-container">
                <slot name="search"></slot>
              </div>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
  <form role="search" slot="search">
    <ic-search-bar label="Search" placeholder="Search" slot="search"></ic-search-bar>
  </form>
</ic-top-navigation>
`;

exports[`ic-top-navigation tests short title on mobile devices: renders-with-short-title 1`] = `
<ic-top-navigation app-title="Application Name" short-title="App Name">
  <mock:shadow-root>
    <div class="top-navigation">
      <ic-section-container aligned="full-width" full-height="">
        <header role="banner">
          <div class="top-panel-container">
            <div class="app-details-container">
              <a class="title-link" href="/">
                <ic-typography aria-label="Application Name (App Name)" variant="subtitle-small">
                  App Name
                </ic-typography>
              </a>
            </div>
          </div>
        </header>
      </ic-section-container>
    </div>
  </mock:shadow-root>
</ic-top-navigation>
`;
